data/job_47/log.txt
mysql: [Warning] Using a password on the command line interface can be insecure.
Fetched 10 sequences.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
Inserted 10 sequences.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
/localdisk/home/s2837201/public_html/ICA/data/job_47/run_analysis.sh: line 102: //: Is a directory
mysql: [Warning] Using a password on the command line interface can be insecure.
Created /localdisk/home/s2837201/public_html/ICA/data/job_47/conservation.1.png
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
Motif parsing complete.
mysql: [Warning] Using a password on the command line interface can be insecure.


Building a new DB, current time: 03/30/2026 19:32:37
New DB name:   /localdisk/home/s2837201/public_html/ICA/data/job_47/blastdb
New DB title:  /localdisk/home/s2837201/public_html/ICA/data/job_47/sequences.fasta
Sequence type: Protein
Keep MBits: T
Maximum file size: 3000000000B
Adding sequences from FASTA; added 10 sequences in 0.168831 seconds.


mysql: [Warning] Using a password on the command line interface can be insecure.
mysql: [Warning] Using a password on the command line interface can be insecure.
  File "<stdin>", line 11
    //limiting to 400 (Meta API constraint)
    ^^
SyntaxError: invalid syntax
mysql: [Warning] Using a password on the command line interface can be insecure.
JAHbio job 47 complete.
